--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pg": "^7.12.1",
     "shortid": "^2.2.15",
     "sqlite3": "^4.1.0",
+    "twilio": "^3.37.1",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
