--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.1",
     "minipass": "^3.1.1",
+    "moment": "^2.24.0",
     "pg": "^7.12.1",
     "shortid": "^2.2.15",
     "sqlite3": "^4.1.0",
