--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "jest": "^24.9.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.1",
+    "knex-cleaner": "^1.3.0",
+    "lodash": "^4.17.15",
     "minipass": "^3.1.1",
     "moment": "^2.24.0",
     "pg": "^7.12.1",
@@ -40,7 +42,6 @@
   },
   "devDependencies": {
     "nodemon": "^1.19.4",
-    "supertest": "^4.0.2",
-    "knex-cleaner": "^1.3.0"
+    "supertest": "^4.0.2"
   }
 }
