--- a/swagger/index.yaml
+++ b/swagger/index.yaml
@@ -14,6 +14,8 @@ tags:
     description: "Handling all calendar operations"
   - name: "Event"
     description: "Handling all event operations"
+  - name: "Subscriber"
+    description: "Handling all subscriber operations"
 
 paths:
   /auth/register:
@@ -161,7 +163,7 @@ paths:
               type: integer
               example: 1
 
-  /api/calendars/{calendarUuid}/?subscribe=true:
+  /api/calendars/{calendarUuid}/subscriptions?subscribe=true:
     put:
       tags:
         - Calendar
@@ -187,7 +189,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Calendar"
-  /api/calendars/{calendarUuid}/?subscribe=false:
+  /api/calendars/{calendarUuid}/subscriptions?subscribe=false:
     put:
       tags:
         - Calendar
@@ -214,6 +216,32 @@ paths:
               schema:
                 type: integer
                 example: 1
+  /api/calendars/{calendarUuid}/privacy:
+    put:
+      tags:
+        - Calendar
+      summary: "Update calendar privacy"
+      operationId: "updateCalendarPrivacy"
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: Authorization
+          in: header
+          schema:
+            $ref: "#/components/schemas/Authorization"
+          required: true
+        - in: path
+          name: calendarUuid
+          schema:
+            $ref: "#/components/schemas/CalendarUuid"
+          required: true
+      responses:
+        "200":
+          description: "Successfully unsubscribe from a calendar"
+          content:
+            text/plain:
+              schema:
+                $ref: "#/components/schemas/NewCalendarResponse"
   /api/calendars/{calendarUuid}/events:
     post:
       tags:
@@ -333,6 +361,32 @@ paths:
               schema:
                 type: integer
                 example: 1
+  /api/calendars/{calendarUuid}/subscribers:
+    get:
+      tags:
+        - Subscriber
+      summary: "Get all subscribers of a calendar"
+      operationId: "getAllSubscribers"
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: Authorization
+          in: header
+          schema:
+            $ref: "#/components/schemas/Authorization"
+          required: true
+        - in: path
+          name: calendarUuid
+          schema:
+            type: string
+          required: true
+      responses:
+        "200":
+          description: "Successfully retrieved calendar subscribers"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Subscribers"
 
 components:
   securitySchemes:
@@ -561,3 +615,13 @@ components:
                 example: "#1A73E8"
               uuid:
                 type: string
+    Subscribers:
+      type: array
+      items:
+        properties:
+          firstName:
+            type: string
+          lastName:
+            type: string
+          email:
+            type: string
