--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest": "^24.9.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.1",
+    "knex-cleaner": "^1.3.0",
     "minipass": "^3.1.1",
     "pg": "^7.12.1",
     "shortid": "^2.2.15",
@@ -43,7 +44,6 @@
   },
   "devDependencies": {
     "nodemon": "^1.19.4",
-    "supertest": "^4.0.2",
-    "knex-cleaner": "^1.3.0"
+    "supertest": "^4.0.2"
   }
 }
