--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "school-calendar-be",
   "version": "1.0.0",
-  "description": "To get the server running locally:",
+  "description": "D8Picker backend",
   "main": "index.js",
-  "scripts": {
-    "start": "nodemon app.js"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Lambda-School-Labs/school-calendar-be.git"
@@ -16,11 +13,24 @@
     "url": "https://github.com/Lambda-School-Labs/school-calendar-be/issues"
   },
   "homepage": "https://github.com/Lambda-School-Labs/school-calendar-be#readme",
+  "scripts": {
+    "dev": "nodemon index.js",
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
+    "@hapi/joi": "^17.1.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "gitignore": "^0.6.0",
-    "mongoose": "^5.8.10",
-    "nodemon": "^2.0.2"
+    "helmet": "^3.21.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.8.10"
+  },
+  "devDependencies": {
+    "jest": "^25.1.0",
+    "nodemon": "^2.0.2",
+    "supertest": "^4.0.2"
   }
 }
