--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "mongoose": "^5.8.10"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.1.3",
     "jest": "^25.1.0",
+    "mongodb-memory-server-core": "^6.2.4",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
   }
