--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "testEnvironment": "node"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -36,6 +36,12 @@
     "jest": "^25.1.0",
     "mongodb-memory-server-core": "^6.2.4",
     "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
     "supertest": "^4.0.2"
+  },
+  "prettier": {
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": true
   }
 }
