--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
-    "mongoose": "^5.8.10"
+    "knex": "^0.21.1",
+    "mongoose": "^5.8.10",
+    "pg": "^8.2.0",
+    "sqlite3": "^4.2.0"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.1.3",
