delete route tested
Co-authored-by: aldairbalanzar <abalanzar7@gmail.com>
Co-authored-by: Katya <katya.p.1129@gmail.com>
Co-authored-by: Devanee Reid <devaneereid@gmail.com>
Co-authored-by: ddan_7@hotmail.com <ddan_7@hotmail.com>
Co-authored-by: Vladislav Mogilevskiy <vladmog@gmail.com>

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "test": "jest --detectOpenHandles --forceExit",
+    "test": "jest --detectOpenHandles --forceExit --watch",
     "coverage": "jest --coverage --detectOpenHandles --forceExit || true"
   },
   "jest": {
