--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "test": "jest --detectOpenHandles --forceExit --watch",
+    "test": "cross-env DB_ENV=testing jest --detectOpenHandles --forceExit --watch",
     "coverage": "jest --coverage --detectOpenHandles --forceExit || true"
   },
   "jest": {
+    "testEnvironment": "node",
     "collectCoverageFrom": [
       "**/*.{js,jsx}",
       "!**/node_modules/**",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.1.3",
+    "cross-env": "^7.0.2",
     "jest": "^25.1.0",
     "mongodb-memory-server-core": "^6.2.4",
     "nodemon": "^2.0.2",
