--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "google-auth-library": "^6.0.0",
     "helmet": "^3.21.2",
     "knex": "^0.21.1",
     "mongoose": "^5.8.10",
