--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "cross-env": "^7.0.2",
     "jest": "^25.1.0",
+    "knex-cleaner": "^1.3.0",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2"
